--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,54 +1,23 @@
  <div class="row"> 
+
                              
                                
                     <div class="col-md-6 col-sm-6 col-xs-6" ng-repeat="sale in sales">                       
-                    <div class="panel panel-primary text-center no-boder bg-color-woolly">
-                        <div class="panel-body">
-                            <i class="fa fa-check-square  fa-5x"></i>
-                            <h2 ng-bind="sale.name"></h2>
-                            <p>Si tu veux le premier panier charcut viens par ici !</p>
-                        </div>
-                        <div class="panel-footer bg-color-woolly2" onclick='window.location="http://localhost:8000/login"'"">
-                           Accéder à la vente
-                            
-                        </div>
-                    </div></div>
-                     <div class="col-md-6 col-sm-6 col-xs-6">                       
-                    <div class="panel panel-primary text-center no-boder bg-color-woolly">
-                        <div class="panel-body">
-                            <i class="fa fa-check-square  fa-5x"></i>
-                            <h2>Panier Charcut</h2>
-                            <p>Si tu veux le premier panier charcut viens par ici !</p>
-                        </div>
-                          <div class="panel-footer bg-color-woolly2" onclick='window.location="http://localhost:8000/login"'"">
-                          <a ng-href="http://localhost:8000/login"> Accéder à la vente</a>
-                            
-                        </div>
-                    </div></div>
-                    <div class="col-md-6 col-sm-6 col-xs-6">                       
-                    <div class="panel panel-primary text-center no-boder bg-color-woolly">
-                        <div class="panel-body">
-                            <i class="fa fa-check-square  fa-5x"></i>
-                            <h2>Place FDP</h2>
-                            <p>Si tu veux ta place pour la soirée de fin d'année viens par ici !</p>
-                        </div>
-                          <div class="panel-footer bg-color-woolly2" onclick='window.location="http://localhost:8000/login"'"">
-                          <a ng-href="http://localhost:8000/login"> Accéder à la vente</a>
-                            
+                        <div class="panel panel-primary text-center no-boder bg-color-woolly">
+                            <div class="panel-body">
+                                <i class="fa fa-check-square  fa-5x"></i>
+                                <h1>{{sale.attributes.name}}</h1>
+                                <p>{{sale.attributes.description}}</p>
+                                <p>Organisé par :{{sale.attributes.association}}</p>
+                                <p>Début des ventes le : {{sale.attributes.begin_date}}
+                            </div>
+                            <div class="panel-footer bg-color-woolly2">
+                               <a href="{{sale.relationships.items.links.related}}" > Accéder à la vente</a>
+                                
+                            </div>
                         </div>
                     </div>
-                    </div>
-                    <div class="col-md-6 col-sm-6 col-xs-6">                       
-                    <div class="panel panel-primary text-center no-boder bg-color-woolly">
-                        <div class="panel-body">
-                            <i class="fa fa-check-square  fa-5x"></i>
-                            <h3 style="font-size: 80px;">110 </h3>
-                        </div>
-                        <div class="panel-footer bg-color-woolly2" onclick='window.location="http://localhost:8000/login"'"">
-                          <a ng-href="http://localhost:8000/login"> Accéder à la vente</a>
-                            
-                        </div>
-                    </div>
+                     
 </div>
                         
                         
