Ajout de toutes les pages + affichage de chaque vente

--- a/app/views/add_sale.html
+++ b/app/views/add_sale.html
@@ -29,6 +29,7 @@
         </div>
     </div>
 </div>!-->
+<div ng-controller = "Add_saleCtrl">
 <div class="row">
                 <div class="col-md-12 col-sm-9">
                     
@@ -75,3 +76,4 @@
                         </div>
                     
                 </div>
+</div>
