--- a/app/views/billetterie.html
+++ b/app/views/billetterie.html
@@ -1,107 +1,37 @@
-<!-- Page Content -->
-    <div class="container">
-<!--<div class="col-lg-4 col-sm-12">
-  <h1>Liste des ventes disponibles</h1>
-  <p class="lead"></p>
-</div>!-->
-      <!-- Page Heading -->
-      <h1 class="my-4">Liste des ventes disponibles
-      </h1>
+ <div class="row"> 
 
-      <div class="row">
-        <div class="col-lg-4 col-sm-6 portfolio-item">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Project One</a>
-              </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum quasi sapiente nesciunt? Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6 portfolio-item">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Project Two</a>
-              </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6 portfolio-item">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Project Three</a>
-              </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quisquam, error quod sed cumque, odio distinctio velit nostrum temporibus necessitatibus et facere atque iure perspiciatis mollitia recusandae vero vel quam!</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6 portfolio-item">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Project Four</a>
-              </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6 portfolio-item">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Project Five</a>
-              </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6 portfolio-item">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Project Six</a>
-              </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque earum nostrum suscipit ducimus nihil provident, perferendis rem illo, voluptate atque, sit eius in voluptates, nemo repellat fugiat excepturi! Nemo, esse.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- /.row -->
-
-      <!-- Pagination -->
-      <ul class="pagination justify-content-center">
-        <li class="page-item">
-          <a class="page-link" href="#" aria-label="Previous">
-            <span aria-hidden="true">&laquo;</span>
-            <span class="sr-only">Previous</span>
-          </a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#">1</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#">2</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#">3</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#" aria-label="Next">
-            <span aria-hidden="true">&raquo;</span>
-            <span class="sr-only">Next</span>
-          </a>
-        </li>
-      </ul>
-
-    </div>
-    <!-- /.container -->
+                    <div class="jumbotron">
+                        <h1>Liste des ventes</h1>
+                        <p>Toutes les ventes sont affichées.</p>
+                      </div>    
+                   <!--<div  ng-controller="MyController">       !-->     
+                    <div class="col-md-6 col-sm-6 col-xs-6" ng-repeat="sale in sales" ng-cloak>                       
+                        <div class="panel panel-primary text-center no-boder bg-color-woolly">
+                            <div class="panel-body">
+                                <i class="fa fa-check-square  fa-5x"></i>
+                                <h1>{{sale.attributes.name}}</h1>
+                                <hr>
+                                 <p>{{sale.attributes.description}}</p>
+                                <p>Organisé par : <b>{{sale.attributes.association}}</b></p>
+                                <p>Début des ventes le : {{sale.attributes.begin_date | date: 'dd - MM - yyyy'}}</p>
+                                <!--{{sale.relationships.items.links.related}}!-->
+                                    <div  ng-show="sale.__showMore" ng-repeat="item in sale.__items"  style="text-align:left;" ><hr>
+                                        <h3><span ng-bind="item.id"></span> :   </h3> 
+                                        <p> Prix : <span ng-bind="item.attributes.price"></span> €</p>
+                                        Nombre de place : 
+                                        <input type="number" max="5" min="0" value="1" ng-model="poulet"/>                                        
+                                    </div>
+                            </div>
+                            <div  class="panel-footer bg-color-woolly2">
+                               <a  class="btn btn-default btn-lg" ng-href="#!/sale/{{sale.id}}">Payer</a>
+                                   
+                                    
+                            </div>
+                        </div>
+                    </div>
+                              
+</div>                    
+    
+           
+                
+                 <!-- /. ROW  --> 
