--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,37 +1,35 @@
  <div class="row"> 
 
-                             
-                   <div  ng-controller="MyController">            
-                    <div class="col-md-6 col-sm-6 col-xs-6" ng-repeat="sale in sales">                       
+                    <div class="jumbotron">
+                        <h1>Bienvenue sur Woolly</h1>
+                        <p>Billetterie des associations de l'UTC.</p>
+                      </div>    
+                   <!--<div  ng-controller="MyController">       !-->     
+                    <div class="col-md-6 col-sm-6 col-xs-6" ng-repeat="sale in next_sales" ng-cloak>                       
                         <div class="panel panel-primary text-center no-boder bg-color-woolly">
                             <div class="panel-body">
                                 <i class="fa fa-check-square  fa-5x"></i>
                                 <h1>{{sale.attributes.name}}</h1>
+                                <hr>
                                  <p>{{sale.attributes.description}}</p>
-                                <p>Organisé par :{{sale.attributes.association}}</p>
+                                <p>Organisé par : <b>{{sale.attributes.association}}</b></p>
                                 <p>Début des ventes le : {{sale.attributes.begin_date | date: 'dd - MM - yyyy'}}</p>
-                                {{sale.relationships.items.links.related}}
-                                    <div ng-show = "IsVisible" ng-repeat="item in items2"  style="text-align:left;" ><hr>
-                                        <h3 ng-bind="item.id" > <!--{{item.attributes.id}}!-->   </h3> :
+                                <!--{{sale.relationships.items.links.related}}!-->
+                                    <div  ng-show="sale.__showMore" ng-repeat="item in sale.__items"  style="text-align:left;" ><hr>
+                                        <h3><span ng-bind="item.id"></span> :   </h3> 
                                         <p> Prix : <span ng-bind="item.attributes.price"></span> €</p>
                                         Nombre de place : 
-                                        <input type="number" max="1" min="0" value="0" ng-model="nbPlace"/>
-                                        <!--<hr>
-                                        <h3>Place extérieur : </h3>
-                                        <p> Prix : 14€</p>
-                                        <input type="number" max="10" min="0" value="0" ng-model="PlaceExterieur"/>!-->
-                                        
+                                        <input type="number" max="5" min="0" value="1" ng-model="poulet"/>                                        
                                     </div>
-                                
-                            
-                        </div>
-                        <div ng-show = "IsVisible"class="panel-footer bg-color-woolly2">
-                                        <button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#myModal" ng-click="ShowHide()">Payer</button>
-                                        </div>
-                        <div ng-show="IsHidden" class="panel-footer bg-color-woolly2">
-                               <input type="button" value="Voir la vente" ng-click="ShowHide();" />
-                                
-                        </div>
+                            </div>
+
+                            <div ng-show="sale.__showMore" class="panel-footer bg-color-woolly2">
+                                            <button type="button" class="btn btn-success btn-lg" data-toggle="modal" ng-click="showDialog(poulet)">Payer</button>
+                            </div>
+                            <div ng-show="!sale.__showMore" class="panel-footer bg-color-woolly2">
+                                   <input type="button" value="Voir la vente" ng-click="loadItemSpecification(sale)" />
+                                    
+                            </div>
                         </div>
                     </div>
                       <!--href="{{sale.relationships.items.links.related}}" !-->
@@ -47,20 +45,20 @@
                             <h4 class="modal-title">Finalisation de votre achat</h4>
                           </div>
                           <div class="modal-body">
-                            <p>Vous souhaitez acheter <b ng-bind="getNbPlaceUtc()">0</b> place étudiante et <b ng-bind="getNbPlaceExte()">0</b> place(s) extérieure(s).<br>Veuillez choisir votre moyen de paiement : </p>
+                            <p>Vous souhaitez acheter <b ng-bind="getNbPlace()">0</b> place.<br>Veuillez choisir votre moyen de paiement : </p>
                           </div>
                           <div class="modal-footer" style="text-align: center;">
-                            <button type="button" class="btn btn-success" >PayUTC</button>
-                            <button type="button" class="btn btn-success" >Liquide</button>
+                            <!--<button type="button" class="btn btn-success" ng-href="https://payutc.nemopay.net" >PayUTC</button>!-->
+                            <a type="button" class="btn btn-success" ng-href="https://payutc.nemopay.net">PayUTC</a>
+                            <a type="button" class="btn btn-success" ng-href="#!/mon_compte" >Liquide</a>
                             <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
                           </div>
                         </div>
 
                       </div>
                     </div> 
-                </div>                           
+               <!-- </div>!-->                           
 </div>                    
-
     
            
                 
