changement css + possibilité d'acheter ses places directement dans le home

--- a/app/views/billetterie.html
+++ b/app/views/billetterie.html
@@ -23,7 +23,7 @@
                                     </div>
                             </div>
                             <div  class="panel-footer bg-color-woolly2">
-                               <a  class="btn btn-default btn-lg" ng-href="#!/sale/{{sale.id}}">Payer</a>
+                               <a  class="btn btn-default btn-lg" ng-href="#!/sale/{{sale.id}}">Voir la vente</a>
                                    
                                     
                             </div>
