--- a/app/views/mon_compte.html
+++ b/app/views/mon_compte.html
@@ -29,7 +29,7 @@
         </div>
     </div>
 </div>!-->
-<div class="row">
+<div class="row" style="background-color: rgba(255, 255, 255, 0.6); margin-bottom: 2em; ">
                 <div class="col-md-12 col-sm-9">
                     
                         <div class="panel-body">
