--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -33,7 +33,7 @@ body {
 /* Custom page footer */
 .footer {
   padding-top: 19px;
-  color: #777;
+  color: #FFF;
   border-top: 1px solid #e5e5e5;
   text-align:center;
 }
@@ -44,6 +44,7 @@ body {
 .jumbotron {
   text-align: center;
   border-bottom: 1px solid #e5e5e5;
+  background-color: rgba(255, 255, 255, 0.6);
 }
 .jumbotron .btn {
   font-size: 21px;
