--- a/app/views/add_sale.html
+++ b/app/views/add_sale.html
@@ -1,79 +1,122 @@
-<!--<div class="container">
-    <div class="row">
-        <div class="col-md-3">
-            <ul class="nav nav-pills nav-stacked">
-                <li class="active"><a href=""><i class="fa fa-home fa-fw"></i>Mes achats</a></li>
-                <li><a href=""><i class="fa fa-list-alt fa-fw"></i>Mes informations</a></li>
-        </div>
-        <div class="col-md-9">
-            <table class="table table-hover">
-                <thead>
-                  <tr>
-                    <th>Intitulé</th>
-                    <th>Date</th>
-                    <th>Prix</th>
-                    <th>Statut</th>
-                    <th></th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr ng-repeat="order in orders">
-                    <td>{{order.id}}</td>
-                    <td>{{order.attributes.date}}</td>
-                    <td>12€</td>
-                    <td>{{order.attributes.status}}</td>
-                    <td><button type="button" class="btn btn-primary" >Télécharger ma place</button></td>
-                  </tr>
-                </tbody>
-              </table>
-        </div>
-    </div>
-</div>!-->
-<div ng-controller = "Add_saleCtrl">
-<div class="row">
-                <div class="col-md-12 col-sm-9">
-                    
-                        <div class="panel-body">
-                            <ul class="nav nav-pills">
-                                <li class="active"><a href="#!/mon_compte#achats" data-toggle="tab">Mes achats</a>
-                                </li>
-                                <li class=""><a href="#!/mon_compte#profile" data-toggle="tab">Mes informations</a>
-                                </li>
-                                
-                            </ul>
+ <div class="row"> 
 
-                            <div class="tab-content" style="padding-top: 20px;">
-                                <div class="tab-pane fade active in" id="achats">
-                                    <table class="table table-hover">
-                                        <thead>
-                                          <tr>
-                                            <th>Intitulé</th>
-                                            <th>Date</th>
-                                            <th>Prix</th>
-                                            <th>Statut</th>
-                                            <th></th>
-                                          </tr>
-                                        </thead>
-                                        <tbody>
-                                          <tr ng-repeat="order in orders | orderBy: '-date':true | limitTo: 10">
-                                            <td>{{order.id}}</td>
-                                            <td>{{order.attributes.date}}</td>
-                                            <td>12€</td>
-                                            <td ng-bind="getStatus(order)">{{order.attributes.status}}</td>
-                                            <td><button type="button" ng-show="order.attributes.status=='payed'" class="btn btn-primary" style="width: 12em;">Télécharger ma place</button>
-                                                <button type="button" ng-show="order.attributes.status=='not_payed'" class="btn btn-success" style="width: 12em;">Payer</button>
-                                                <button type="button" ng-show="order.attributes.status=='awaiting_validation'" class="btn btn-warning" style="width: 12em;">Valider</button>
-                                            <button type="button" ng-show="order.attributes.status=='validated'" class="btn btn-success disabled" style="width: 12em;">Validé</button></td>
-                                          </tr>
-                                        </tbody>
-                                      </table>
-                                </div>
-                                <div class="tab-pane fade" id="profile">
-                                   <p>Nom :</p>
-                                   <p>Prénom :</p>
-                                </div>
+                    <div class="jumbotron">
+                        <h1>Nouvelle vente</h1>
+                      </div>   
+                      <div class="container" >
+                      <h2>Informations générales:</h2>
+                       <form class="form-horizontal">
+                          <div class="form-group">
+                            <label class="control-label col-sm-2" for="name">Nom :</label>
+                            <div class="col-sm-10">
+                              <input type="text" class="form-control" id="name" placeholder="Entrez un nom">
                             </div>
-                        </div>
-                    
-                </div>
-</div>
+                          </div>
+                          <div class="form-group"> 
+                            <label class="control-label col-sm-2" for="description">Description :</label>
+                             <div class="col-sm-10">
+                            <textarea class="form-control" rows="3" id="description">Cette description sera affichée sur le site.</textarea>
+                            </div>
+                          </div>
+                          <div class="form-group">
+                            <label class="control-label col-sm-2" for="nbPlaces">Nombre de places total :</label>
+                            <div class="col-sm-10">
+                              <input type="number" class="form-control" id="nbPlaces" placeholder="Entrez le nombre de places total">
+                            </div>
+                          </div>
+                          <div class="form-group">
+                            <label class="control-label col-sm-2" for="start_date">Date de début des ventes :</label>
+                            <div class="col-sm-10">
+                              <input type="datetime" class="form-control" id="start_date" value="2017-11-05 22:47:25">
+                            </div>
+                          </div>
+                          <div class="form-group">
+                            <label class="control-label col-sm-2" for="end_date">Date de fin des ventes :</label>
+                            <div class="col-sm-10">
+                              <input type="datetime" class="form-control" id="end_date" value="2017-11-05 22:47:25">
+                            </div>
+                          </div>
+                          <hr>
+                          <h2>Informations sur les places :</h2>
+                          <h3>Place 1</h3>
+                          <div class="form-group">
+                            <label class="control-label col-sm-2" for="place1_name">Nom :</label>
+                            <div class="col-sm-10">
+                              <input type="text" class="form-control" id="place1_name" placeholder="Entrez le nom de la première place (ex : Place cotisant)">
+                            </div>
+                          </div>
+                          <div class="form-group">
+                            <label class="control-label col-sm-2" for="place1_type">Type de place :</label>
+                            <div class="col-sm-10">
+                              <select class="form-control" id="place1_type">
+                                <option>Place Cotisant</option>
+                                <option>Place Non-Cotisant</option>
+                                <option>Place Tremplin</option>
+                                <option>Place Extérieur</option>
+                              </select>
+                            </div>
+                          </div>
+                          <div class="form-group">
+                            <label class="control-label col-sm-2" for="place1_nbPlaces">Nombre de places :</label>
+                            <div class="col-sm-10">
+                              <input type="number" class="form-control" id="place1_nbPlaces" placeholder="Entrez le nombre de places pour ce type de place">
+                            </div>
+                          </div>
+                          <div class="form-group">
+                            <label class="control-label col-sm-2" for="place1_price">Prix :</label>
+                            <div class="col-sm-10">
+                              <input type="number" class="form-control" id="place1_price" placeholder="Entrez le prix de ce type de place">
+                            </div>
+                          </div>
+                          <div class="form-group" ng-show="!place2">
+                            <div class="col-sm-12" style="text-align: center;">
+                              <button type="submit" class="btn btn-primary" ng-click="place2=true"  >Ajouter un type de place</button>
+                            </div>
+                          </div>
+                          <div id="place2" ng-show="place2">
+                            <h3>Place 2</h3>
+                          <div class="form-group">
+                            <label class="control-label col-sm-2" for="place2_name">Nom :</label>
+                            <div class="col-sm-10">
+                              <input type="text" class="form-control" id="place2_name" placeholder="Entrez le nom de la deuxième place (ex : Place cotisant)">
+                            </div>
+                          </div>
+                          <div class="form-group">
+                            <label class="control-label col-sm-2" for="place2_type">Type de place :</label>
+                            <div class="col-sm-10">
+                              <select class="form-control" id="place2_type">
+                                <option>Place Non-Cotisant</option>
+                                <option>Place Cotisant</option>
+                                <option>Place Tremplin</option>
+                                <option>Place Extérieur</option>
+                            </div>
+                          </div>
+                          <div class="form-group">
+                            <label class="control-label col-sm-2" for="place2_nbPlaces">Nombre de places :</label>
+                            <div class="col-sm-10">
+                              <input type="number" class="form-control" id="place2_nbPlaces" placeholder="Entrez le nombre de places pour ce type de place">
+                            </div>
+                          </div>
+                          <div class="form-group">
+                            <label class="control-label col-sm-2" for="place2_price">Prix :</label>
+                            <div class="col-sm-10">
+                              <input type="number" class="form-control" id="place2_price" placeholder="Entrez le prix de ce type de place">
+                            </div>
+                          </div>
+                          </div>
+                          <div class="form-group" ng-show="!place3 && place2">
+                            <div class="col-sm-12" style="text-align: center;">
+                              <button type="submit" class="btn btn-primary " ng-click="place3=true"  >Ajouter un type de place</button>
+                            </div>
+                          </div>
+                          <hr>
+
+                          <div class="form-group">
+                            <div class="col-sm-12" style="text-align: center;">
+                              <button type="submit" class="btn btn-success btn-lg"  >Ajouter</button>
+                            </div>
+                          </div>
+                        </form>  
+                      </div>
+                                                                  
+</div>     
