--- a/app/views/add_sale.html
+++ b/app/views/add_sale.html
@@ -3,7 +3,7 @@
                     <div class="jumbotron">
                         <h1>Nouvelle vente</h1>
                       </div>   
-                      <div class="container" >
+                      <div class="container" style="background-color: rgba(255, 255, 255, 0.7); margin-bottom: 2em; " >
                       <h2>Informations générales:</h2>
                        <form class="form-horizontal">
                           <div class="form-group">
