--- a/app/views/mon_compte.html
+++ b/app/views/mon_compte.html
@@ -29,49 +29,49 @@
         </div>
     </div>
 </div>!-->
-<div class="row" style="background-color: rgba(255, 255, 255, 0.6); margin-bottom: 2em; ">
-                <div class="col-md-12 col-sm-9">
-                    
-                        <div class="panel-body">
-                            <ul class="nav nav-pills">
-                                <li class="active"><a href="#!/mon_compte#achats" data-toggle="tab">Mes achats</a>
-                                </li>
-                                <li class=""><a href="#!/mon_compte#profile" data-toggle="tab">Mes informations</a>
-                                </li>
-                                
-                            </ul>
 
-                            <div class="tab-content" style="padding-top: 20px;">
-                                <div class="tab-pane fade active in" id="achats">
-                                    <table class="table table-hover">
-                                        <thead>
-                                          <tr>
-                                            <th>Intitulé</th>
-                                            <th>Date</th>
-                                            <th>Prix</th>
-                                            <th>Statut</th>
-                                            <th></th>
-                                          </tr>
-                                        </thead>
-                                        <tbody>
-                                          <tr ng-repeat="order in orders | orderBy: '-date':true | limitTo: 10">
-                                            <td>{{order.id}}</td>
-                                            <td>{{order.attributes.date}}</td>
-                                            <td>12€</td>
-                                            <td ng-bind="getStatus(order)">{{order.attributes.status}}</td>
-                                            <td><button type="button" ng-show="order.attributes.status=='payed'" class="btn btn-primary" style="width: 12em;">Télécharger ma place</button>
-                                                <button type="button" ng-show="order.attributes.status=='not_payed'" class="btn btn-success" style="width: 12em;">Payer</button>
-                                                <button type="button" ng-show="order.attributes.status=='awaiting_validation'" class="btn btn-warning" style="width: 12em;">Valider</button>
-                                            <button type="button" ng-show="order.attributes.status=='validated'" class="btn btn-success disabled" style="width: 12em;">Validé</button></td>
-                                          </tr>
-                                        </tbody>
-                                      </table>
-                                </div>
-                                <div class="tab-pane fade" id="profile">
-                                   <p>Nom :</p>
-                                   <p>Prénom :</p>
-                                </div>
-                            </div>
-                        </div>
+
+<div class="row" style="background-color: rgba(255, 255, 255, 0.6); margin-bottom: 2em; ">
+    <div class="col-md-12 col-sm-9">
+        
+            <div class="panel-body">
+                <ul class="nav nav-pills">
+                    <li class="active"><a href="#!/mon_compte#achats" data-toggle="tab">Mes achats</a>
+                    </li>
+                    <li class=""><a href="#!/mon_compte#profile" data-toggle="tab">Mes informations</a>
+                    </li>
                     
+                </ul>
+                <div class="tab-content" style="padding-top: 20px;">
+                    <div class="tab-pane fade active in" id="achats">
+                        <table class="table table-hover">
+                            <thead>
+                              <tr>
+                                <th>Intitulé</th>
+                                <th>Date</th>
+                                <th>Prix</th>
+                                <th>Statut</th>
+                                <th></th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr ng-repeat="order in orders | orderBy: '-date':true | limitTo: 10">
+                                <td>{{order.id}}</td>
+                                <td>{{order.attributes.date}}</td>
+                                <td>12€</td>
+                                <td ng-bind="getStatus(order)">{{order.attributes.status}}</td>
+                                <td><a type="button" ng-show="order.attributes.status=='payed'" class="btn btn-primary" style="width: 12em;" ng-click="generatePDF(order)" >Télécharger ma place</a>
+                                    <button type="button" ng-show="order.attributes.status=='not_payed'" class="btn btn-success" style="width: 12em;">Payer</button>
+                                    <button type="button" ng-show="order.attributes.status=='awaiting_validation'" class="btn btn-warning" style="width: 12em;">Valider</button>
+                                <button type="button" ng-show="order.attributes.status=='validated'" class="btn btn-success disabled" style="width: 12em;">Validé</button></td>
+                              </tr>
+                            </tbody>
+                          </table>
+                    </div>
+                    <div class="tab-pane fade" id="profile">
+                       <p><b>Nom :</b></p>
+                       <p><b>Prénom :</b></p>
+                    </div>
                 </div>
+            </div>                  
+</div>
