--- a/app/views/sale.html
+++ b/app/views/sale.html
@@ -1,12 +1,12 @@
  <div class="row" > 
 
-                    <div class="jumbotron" background-color: rgba(255, 255, 255, 0.6);>
+                    <div class="jumbotron" >
                         <h1>{{sale.attributes.name}}</h1>
                         <p>{{sale.attributes.description}}</p>
                         <p>Organisé par : <b>{{sale.attributes.association}}</b></p>
                                 <p>Début des ventes le : {{sale.attributes.begin_date | date: 'dd - MM - yyyy'}}</p>
                       </div>    
-                   <div class="container" style="background-color: rgba(255, 255, 255, 0.6); margin-bottom: 2em; ">
+                   <div class="container" style="background-color: rgba(255, 255, 255, 0.7); margin-bottom: 2em; ">
                       <h2>Places en vente</h2>
                             
                       <table class="table table-hover">
@@ -23,7 +23,7 @@
                             <td>{{items.attributes.name}}</td>
                             <td>{{items.attributes.description}}</td>
                             <td>{{item.attributes.price}} €</td>
-                            <td><button type="button"  ng-show="items.attributes.remaining_quantity>0" class="btn btn-success" style="text-align: center;">Acheter</button>
+                            <td><button type="button"  ng-show="items.attributes.remaining_quantity>0" class="btn btn-success"  ng-click="addOrder()" style="text-align: center;">Acheter</button>
                             <button type="button"  ng-show="items.attributes.remaining_quantity==0" class="btn btn-danger disabled" style="text-align: center;">Complet</button></td>
                           </tr>
                         </tbody>
