Ajout qrcode + génération pdf + choix nb place dans sale.html

--- a/app/views/mon_compte.html
+++ b/app/views/mon_compte.html
@@ -73,5 +73,6 @@
                        <p><b>Prénom :</b></p>
                     </div>
                 </div>
-            </div>                  
+            </div> 
+            <div id="qrcode" style="display:none;"></div>                 
 </div>
