--- a/app/views/sale.html
+++ b/app/views/sale.html
@@ -25,7 +25,7 @@
                             <td>{{items.attributes.description}}</td>
                             <td>{{item.attributes.price}} €</td>
                             <td> <select name="cars" ng-model="item.nbPlace">
-                                    <option value="1">1</option>
+                                    <option value="1" selected>1</option>
                                     <option value="2">2</option>
                                     <option value="3">3</option>
                                     <option value="4">4</option>
