--- a/app/views/main.html
+++ b/app/views/main.html
@@ -17,18 +17,23 @@
                                 <p>Organisé par : <b>{{sale.attributes.association}}</b></p>
                                 <p>Début des ventes le : {{sale.attributes.begin_date | date: 'dd - MM - yyyy HH:mm:ss'}}</p>
                                 <!--{{sale.relationships.items.links.related}}!-->
-                                    <div  ng-show="sale.__showMore" ng-repeat="item in sale.__items"  style="text-align:left;" ><hr>
-                                        <h3><span ng-bind="item.id"></span> :   </h3> 
+                                    <div  ng-show="sale.__showMore && sale.__items.attributes.remaining_quantity>0"  style="text-align:left;" ><hr>
+                                        <h3><span ng-bind="sale.__items.attributes.name"></span> :   </h3> 
                                         <form name="formPlace" novalidate>
-                                                <p> Prix : <span ng-bind="item.attributes.price"></span> €</p>
+                                          <div ng-repeat="item2 in sale.__itemspecification">
+                                                
+                                                <p> Prix : <span ng-bind="item2.attributes.price"></span> €</p>
                                                 Nombre de place : 
-                                                <input type="number" max="10" min="0" value="1" ng-model="item.nbPlace"/>    
+                                                <input  type="number" max="10" min="0" value="1" ng-model="item2.nbPlace"/> 
+                                                </div> 
+
                                          </form>                                    
                                     </div>
                             </div>
 
                             <div ng-show="sale.__showMore" class="panel-footer bg-color-woolly2">
-                                            <button type="button" class="btn btn-success btn-lg" data-toggle="modal" ng-click="showDialog(sale.__items)" data-target="#myModal" >Payer</button>
+                                            <button ng-show="sale.__items.attributes.remaining_quantity>0" type="button" class="btn btn-success btn-lg" data-toggle="modal" ng-click="showDialog(sale.__itemspecification)" data-target="#myModal" >Payer</button>
+                                            <button ng-show="sale.__items.attributes.remaining_quantity==0" type="button" class="btn btn-danger btn-lg" disabled >Complet</button>
                             </div>
                             <div ng-show="!sale.__showMore" class="panel-footer bg-color-woolly2">
                                    <input type="button" value="Voir la vente" ng-click="loadItemSpecification(sale)" />
