Get JWT from Woolly

--- a/Angular5/src/app/pages/login/login.component.html
+++ b/Angular5/src/app/pages/login/login.component.html
@@ -4,6 +4,6 @@
 	</div>
 	
 	<div class="d-flex align-items-center justify-content-center">
-		<a target="_blank" href="{{ loginUrl }}" class="btn btn-primary waves-light" mdbWavesEffect>Se connecter</a>
+		<a href="{{ loginUrl }}" class="btn btn-primary waves-light" mdbWavesEffect>Se connecter</a>
 	</div>
 </main>
