--- a/Angular5/src/resources/_layout.scss
+++ b/Angular5/src/resources/_layout.scss
@@ -5,6 +5,18 @@ body {
 	padding-top: 70px;
 }
 
+/*
+|--------------------------------------------------------------------------
+|	Helpers
+|--------------------------------------------------------------------------
+*/
+
+// Align content vertically and horizontally
+.f-center {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
 
 /*
 |--------------------------------------------------------------------------
