--- a/Angular5/src/app/pages/account/account.component.html
+++ b/Angular5/src/app/pages/account/account.component.html
@@ -22,7 +22,7 @@
 					<tr>
 						<th>Type</th>
 						<td>
-							<pre>{{ me.relationships | json }}</pre>
+							<pre>{{ me.attributes.type }}</pre>
 						</td>						
 					</tr>
 				</tbody>
