Get the relationships of the sale and sale detail
Next time, print the form for the items available for the user, check if the wrong items are displayed

--- a/Angular5/src/app/pages/sale-detail/sale-detail.component.html
+++ b/Angular5/src/app/pages/sale-detail/sale-detail.component.html
@@ -1,6 +1,5 @@
 <main class="container p-5 h-100">
-<!-- 
-	<div *ngIf="sale.is_loading; else saleReady">
+	<div *ngIf="loading; else saleReady">
 		<div class="d-flex h-100 justify-content-center align-items-center three-balls-loader">
 			<div class="ball ball-1"></div>
 			<div class="ball ball-2"></div>
@@ -9,40 +8,37 @@
 	</div>
 
 	<ng-template #saleReady>
-		<!- - <a class="float-left" routerLink="/ventes">Retour aux ventes</a> - ->
+		<!--<a class="float-left" routerLink="/ventes">Retour aux ventes</a>-->
 		<div class="text-center pb-3 mb-2">
-			<h1 class="display-4">{{ sale.attributes.name }}</h1>
-			<!- - TODO association - ->
-			<h5 *ngIf="sale.attributes.associatio" class="text-gray-dark">Organisé par {{ sale.attributes.association }}</h5>
+			<h1 class="display-4">{{ sale.name }}</h1>
+			<h5 *ngIf="sale.association" class="text-gray-dark">Organisé par {{ sale.association.name }}</h5>
 		</div>
 
 		<div class="row py-4 my-4">
 			<div class="col-md-6 my-2">
 				<p class="lead">Description</p>
-				<p class="m-0">{{ sale.attributes.description }}</p>
+				<p class="m-0">{{ sale.description }}</p>
 			</div>
 			<div class="col-md-3 my-2">
 				<p class="lead">Dates</p>
-				<p class="m-0">Ouverture&nbsp;: {{ sale.attributes.begin_date | date }}</p>			
-				<p class="m-0">Fermeture&nbsp;: {{ sale.attributes.end_date | date }}</p>			
+				<p class="m-0">Ouverture&nbsp;: {{ sale.begin_at | date:'dd/MM/yyyy' }}</p>
+				<p class="m-0">Fermeture&nbsp;: {{ sale.end_at | date:'dd/MM/yyyy' }}</p>
 			</div>
 			<div class="col-md-3 my-2">
 				<p class="lead">Quantités</p>
-				<p class="m-0">{{ sale.attributes.max_item_quantity }}</p>
+				<p class="m-0">{{ sale.max_item_quantity }}</p>
 			</div>
 		</div>
 
-		<div *ngIf="sale.relationships.items.count>0; else noItem" class="row">
-			<div *ngFor="let item of sale.relationships.items">
-				azd
+		<div *ngIf="sale.items; else noItem" class="row">
+			<div *ngFor="let item of sale.items">
+				<div>{{item.name}}</div>
 			</div>
 		</div>
 		<ng-template #noItem>
-			<p class="lead">Aucune item n'a été mis en vente pour le moment, revenez plus tard.</p>
+			<p class="lead">Aucun item n'a été mis en vente pour le moment, revenez plus tard.</p>
 		</ng-template>
 
-		<pre class="pre-scrollable mt-5">{{ sale | json }}</pre>
+		<!--<pre class="pre-scrollable mt-5">{{ sale | json }}</pre>-->
 	</ng-template>
- -->
-
 </main>
