--- a/Angular5/src/app/pages/pages.component.html
+++ b/Angular5/src/app/pages/pages.component.html
@@ -36,7 +36,7 @@
 
 <router-outlet></router-outlet>
 
-<footer class="footer fixed-bottom">
+<footer class="footer fixed-bottom bg-white">
 	<p class="container my-2 text-center">
 		Made with <i class="fa fa-heart" aria-hidden="true"></i> by SiMDE. <a routerLink="/about">Contact</a>
 	</p>
