Refactor sale-detail v2

--- a/Angular5/src/app/pages/sale-detail/sale-detail.component.html
+++ b/Angular5/src/app/pages/sale-detail/sale-detail.component.html
@@ -39,7 +39,7 @@
 					<button class="mx-4 btn btn-outline-warning waves-light" mdbWavesEffect (click)="initCart()">
 						<i class="fa fa-trash mr-1"></i> Reset
 					</button>
-					<button class="mx-4 btn btn-primary waves-light" 
+					<button class="mx-4 btn btn-success waves-light" 
 							[class.disabled]="isCartEmpty()||!me" mdbWavesEffect (click)="buy()">
 						<i class="fa fa-shopping-cart mr-1"></i> Acheter
 					</button>
